control-system-infrastructure/sample-gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-backend
  namespace: sample-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-backend
  template:
    metadata:
      labels:
        app: sample-backend
    spec:
      containers:
        - name: api
          image: cnoe.localtest.me:8443/giteaadmin/sample-backend-app:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
