control-system-infrastructure/sample-gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-backend
  namespace: sample-staging
spec:
  selector:
    app: sample-backend
  ports:
    - port: 80
      targetPort: 8080
