control-system-infrastructure/sample-gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-backend
  namespace: sample-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: cnoe.localtest.me
      http:
        paths:
          - path: /sample(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sample-backend
                port:
                  number: 80
